log

Thu 14 Mar 2024 08:19:14 PM UTC: 
 exercises.c | 65 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 60 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:92:9: error: ‘i’ undeclared (first use in this function)
   92 |     for(i = 0; i < size - 2; i++)
      |         ^
exercises.c:92:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b6e00e8
Thu 14 Mar 2024 08:21:53 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:92:9: error: ‘i’ undeclared (first use in this function)
   92 |     for(i = 0; i < size - 2; i++)
      |         ^
exercises.c:92:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1053c1e
Thu 14 Mar 2024 08:22:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
50dbaad
Thu 14 Mar 2024 08:23:24 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fd38400
Thu 14 Mar 2024 08:24:44 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b70f150
Thu 14 Mar 2024 08:25:21 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 30/70
c49a78d
Thu 14 Mar 2024 08:27:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ca5ec45
